--- a/lab/test/lp-creation/CMakeLists.txt
+++ b/lab/test/lp-creation/CMakeLists.txt
@@ -4,7 +4,7 @@ project(test-lp-creation)
 
 add_executable(test-lp-creation test-lp-creation.cpp)
 target_compile_definitions(test-lp-creation PRIVATE -DPROJECT_DIR=\"${CMAKE_SOURCE_DIR}\")
-add_dependencies(test-lp-creation initialization utils terms linearization lpwriter)
+add_dependencies(test-lp-creation initialization lpmodel-utils terms linearization lpwriter)
 
 target_include_directories(test-lp-creation PRIVATE
         ${CMAKE_SOURCE_DIR}/modules/initialization/include
@@ -18,7 +18,7 @@ target_include_directories(test-lp-creation PRIVATE
         ${DGTAL_INCLUDE_DIRS})
 
 target_link_libraries(test-lp-creation PRIVATE
-        -lutils
+        -llpmodel-utils
         -llpwriter
         -lconstraints
         -lterms
