Alternative formulation for linels

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,13 @@ project(LPModel)
 find_package(DGtal REQUIRED)
 find_package(OpenCV REQUIRED)
 
+set(LINEL "-linel")
+
 link_directories(${LPMODEL_LIBS_DIR}/constraints
-        ${LPMODEL_LIBS_DIR}/initialization
+        ${LPMODEL_LIBS_DIR}/initialization${LINEL}
         ${LPMODEL_LIBS_DIR}/linearization
         ${LPMODEL_LIBS_DIR}/lpwriter
-        ${LPMODEL_LIBS_DIR}/terms
+        ${LPMODEL_LIBS_DIR}/terms${LINEL}
         ${LPMODEL_LIBS_DIR}/utils
         ${LPMODEL_LIBS_DIR}/solassign
         ${LPMODEL_LIBS_DIR}/python-exporter
@@ -18,11 +20,11 @@ link_directories(${LPMODEL_LIBS_DIR}/constraints
         ${DIPACUS_LIBS_DIR})
 
 add_subdirectory(modules/constraints)
-add_subdirectory(modules/initialization)
+add_subdirectory(modules/initialization${LINEL})
 add_subdirectory(modules/linearization)
 add_subdirectory(modules/lpwriter)
 add_subdirectory(modules/solassign)
-add_subdirectory(modules/terms)
+add_subdirectory(modules/terms${LINEL})
 add_subdirectory(modules/utils)
 add_subdirectory(modules/python-exporter)
 add_subdirectory(modules/glpk)
