--- a/app/CApplications/create-ODR-image/CMakeLists.txt
+++ b/app/CApplications/create-ODR-image/CMakeLists.txt
@@ -2,17 +2,17 @@ cmake_minimum_required(VERSION 3.2)
 project(create-ODR-image)
 
 add_executable(create-ODR-image create-ODR-image.cpp src/InputReader.cpp)
-add_dependencies(create-ODR-image initialization)
+add_dependencies(create-ODR-image initialization${LINEL})
 
 target_include_directories(create-ODR-image PRIVATE
         include
-        ${LPMODEL_INCLUDE_DIR}/initialization/include
+        ${LPMODEL_INCLUDE_DIR}/initialization${LINEL}/include
         ${DIPACUS_INCLUDE_DIRS}
         ${SCABOLIC_INCLUDE_DIRS}
         ${DGTAL_INCLUDE_DIRS})
 
 target_link_libraries(create-ODR-image
-        -linitialization
+        -linitialization${LINEL}
         -ldipacus-base
         -lscabolic-core
         -lboost_system
