--- a/app/CApplications/export-cplex-lp/CMakeLists.txt
+++ b/app/CApplications/export-cplex-lp/CMakeLists.txt
@@ -2,15 +2,15 @@ cmake_minimum_required(VERSION 3.2)
 project(export-cplex-lp)
 
 add_executable(export-cplex-lp export-cplex-lp.cpp src/InputReader.cpp)
-add_dependencies(export-cplex-lp constraints initialization linearization lpwriter solassign terms lpmodel-utils)
+add_dependencies(export-cplex-lp constraints initialization${LINEL} linearization lpwriter solassign terms${LINEL} lpmodel-utils)
 
 target_include_directories(export-cplex-lp PRIVATE
         include
         ${LPMODEL_INCLUDE_DIR}/constraints/include
-        ${LPMODEL_INCLUDE_DIR}/initialization/include
+        ${LPMODEL_INCLUDE_DIR}/initialization${LINEL}/include
         ${LPMODEL_INCLUDE_DIR}/linearization/include
         ${LPMODEL_INCLUDE_DIR}/lpwriter/include
-        ${LPMODEL_INCLUDE_DIR}/terms/include
+        ${LPMODEL_INCLUDE_DIR}/terms${LINEL}/include
         ${LPMODEL_INCLUDE_DIR}/utils/include
         ${LPMODEL_INCLUDE_DIR}/types/include
         ${DIPACUS_INCLUDE_DIRS}
@@ -22,8 +22,8 @@ target_include_directories(export-cplex-lp PRIVATE
 target_link_libraries(export-cplex-lp
         -llpwriter
         -lconstraints
-        -lterms
-        -linitialization
+        -lterms${LINEL}
+        -linitialization${LINEL}
         -lscabolic-core
         -ldipacus-derivates
         -ldipacus-components
