--- a/lab/test/sum-sqc/CMakeLists.txt
+++ b/lab/test/sum-sqc/CMakeLists.txt
@@ -2,16 +2,16 @@ cmake_minimum_required(VERSION 3.8)
 project(test-sum-sqc)
 
 add_executable(test-sum-sqc sum-sqc.cpp)
-add_dependencies(test-sum-sqc initialization)
+add_dependencies(test-sum-sqc initialization${LINEL})
 
 target_include_directories(test-sum-sqc PRIVATE
-        ${CMAKE_SOURCE_DIR}/modules/initialization/include
+        ${CMAKE_SOURCE_DIR}/modules/initialization${LINEL}/include
         ${CMAKE_SOURCE_DIR}/ext
         ${DIPACUS_INCLUDE_DIRS}
         ${DGTAL_INCLUDE_DIRS})
 
 target_link_libraries(test-sum-sqc PRIVATE
-        -linitialization
+        -linitialization${LINEL}
         -ldipacus-derivates
         -ldipacus-components
         -ldipacus-base
