--- a/modules/utils/CMakeLists.txt
+++ b/modules/utils/CMakeLists.txt
@@ -7,11 +7,11 @@ add_library(lpmodel-utils SHARED
         src/dispUtils.cpp
         src/compUtils.cpp)
 
-add_dependencies(lpmodel-utils initialization)
+add_dependencies(lpmodel-utils initialization${LINEL})
 
 target_include_directories(lpmodel-utils PRIVATE
         include
-        ${CMAKE_SOURCE_DIR}/modules/initialization/include
+        ${CMAKE_SOURCE_DIR}/modules/initialization${LINEL}/include
         ${DIPACUS_INCLUDE_DIRS}
         ${DGTAL_INCLUDE_DIRS})
 
