--- a/app/CApplications/export-grid/CMakeLists.txt
+++ b/app/CApplications/export-grid/CMakeLists.txt
@@ -2,17 +2,17 @@ cmake_minimum_required(VERSION 3.2)
 project(export-grid)
 
 add_executable(export-grid export-grid.cpp src/InputReader.cpp)
-add_dependencies(export-grid initialization)
+add_dependencies(export-grid initialization${LINEL})
 
 target_include_directories(export-grid PRIVATE
         include
-        ${LPMODEL_INCLUDE_DIR}/initialization/include
+        ${LPMODEL_INCLUDE_DIR}/initialization${LINEL}/include
         ${DIPACUS_INCLUDE_DIRS}
         ${SCABOLIC_INCLUDE_DIRS}
         ${DGTAL_INCLUDE_DIRS})
 
 target_link_libraries(export-grid
-        -linitialization
+        -linitialization${LINEL}
         -ldipacus-base
         -lboost_system
         -lboost_filesystem
