--- a/app/CApplications/export-third-order/CMakeLists.txt
+++ b/app/CApplications/export-third-order/CMakeLists.txt
@@ -2,12 +2,12 @@ cmake_minimum_required(VERSION 3.2)
 project(export-third-order)
 
 add_executable(export-third-order export-third-order.cpp src/InputReader.cpp)
-add_dependencies(export-third-order initialization constraints terms lpmodel-utils python-exporter)
+add_dependencies(export-third-order initialization${LINEL} constraints terms${LINEL} lpmodel-utils python-exporter)
 
 target_include_directories(export-third-order PRIVATE
         include
         ${LPMODEL_INCLUDE_DIR}/constraints/include
-        ${LPMODEL_INCLUDE_DIR}/initialization/include
+        ${LPMODEL_INCLUDE_DIR}/initialization${LINEL}/include
         ${LPMODEL_INCLUDE_DIR}/terms/include
         ${LPMODEL_INCLUDE_DIR}/utils/include
         ${LPMODEL_INCLUDE_DIR}/python-exporter/include
@@ -17,9 +17,9 @@ target_include_directories(export-third-order PRIVATE
 
 target_link_libraries(export-third-order
         -lpython-exporter
-        -linitialization
+        -linitialization${LINEL}
         -lconstraints
-        -lterms
+        -lterms${LINEL}
         -llpmodel-utils
         -ldipacus-base
         -lscabolic-core
