--- a/lab/test/lp-creation/CMakeLists.txt
+++ b/lab/test/lp-creation/CMakeLists.txt
@@ -4,10 +4,10 @@ project(test-lp-creation)
 
 add_executable(test-lp-creation test-lp-creation.cpp)
 target_compile_definitions(test-lp-creation PRIVATE -DPROJECT_DIR=\"${CMAKE_SOURCE_DIR}\")
-add_dependencies(test-lp-creation initialization lpmodel-utils terms linearization lpwriter)
+add_dependencies(test-lp-creation initialization${LINEL} lpmodel-utils terms${LINEL} linearization lpwriter)
 
 target_include_directories(test-lp-creation PRIVATE
-        ${CMAKE_SOURCE_DIR}/modules/initialization/include
+        ${CMAKE_SOURCE_DIR}/modules/initialization${LINEL}/include
         ${CMAKE_SOURCE_DIR}/modules/terms/include
         ${CMAKE_SOURCE_DIR}/modules/constraints/include
         ${CMAKE_SOURCE_DIR}/modules/linearization/include
@@ -21,8 +21,8 @@ target_link_libraries(test-lp-creation PRIVATE
         -llpmodel-utils
         -llpwriter
         -lconstraints
-        -lterms
-        -linitialization
+        -lterms${LINEL}
+        -linitialization${LINEL}
         -lscabolic-core
         -ldipacus-components
         -lboost_system
