--- a/modules/solassign/CMakeLists.txt
+++ b/modules/solassign/CMakeLists.txt
@@ -6,15 +6,15 @@ find_package(DGtal REQUIRED)
 add_library(solassign SHARED
         src/SolutionAssignment.cpp)
 
-add_dependencies(solassign initialization terms)
+add_dependencies(solassign initialization${LINEL} terms${LINEL})
 
 target_include_directories(solassign PRIVATE
         include
-        ${CMAKE_SOURCE_DIR}/modules/initialization/include
+        ${CMAKE_SOURCE_DIR}/modules/initialization${LINEL}/include
         ${CMAKE_SOURCE_DIR}/modules/terms/include
         ${DIPACUS_INCLUDE_DIRS}
         ${DGTAL_INCLUDE_DIRS})
 
 target_link_libraries(solassign PRIVATE
-        -linitialization
-        -lterms)
+        -linitialization${LINEL}
+        -lterms${LINEL})
