--- a/app/CApplications/export-third-order/CMakeLists.txt
+++ b/app/CApplications/export-third-order/CMakeLists.txt
@@ -6,11 +6,11 @@ add_dependencies(export-third-order initialization${LINEL} constraints terms${LI
 
 target_include_directories(export-third-order PRIVATE
         include
-        ${LPMODEL_INCLUDE_DIR}/constraints/include
-        ${LPMODEL_INCLUDE_DIR}/initialization${LINEL}/include
-        ${LPMODEL_INCLUDE_DIR}/terms/include
-        ${LPMODEL_INCLUDE_DIR}/utils/include
-        ${LPMODEL_INCLUDE_DIR}/python-exporter/include
+        ${CMAKE_SOURCE_DIR}/modules/constraints/include
+        ${CMAKE_SOURCE_DIR}/modules/initialization${LINEL}/include
+        ${CMAKE_SOURCE_DIR}/modules/terms/include
+        ${CMAKE_SOURCE_DIR}/modules/utils/include
+        ${CMAKE_SOURCE_DIR}/modules/python-exporter/include
         ${DIPACUS_INCLUDE_DIRS}
         ${SCABOLIC_INCLUDE_DIRS}
         ${DGTAL_INCLUDE_DIRS})
