--- a/app/CApplications/generate-shapes/CMakeLists.txt
+++ b/app/CApplications/generate-shapes/CMakeLists.txt
@@ -6,7 +6,7 @@ add_executable(generate-shapes generate-shapes.cpp)
 add_dependencies(generate-shapes initialization${LINEL})
 
 target_include_directories(generate-shapes PRIVATE
-        ${LPMODEL_INCLUDE_DIR}/initialization${LINEL}/include
+        ${CMAKE_SOURCE_DIR}/modules/initialization${LINEL}/include
         ${DIPACUS_INCLUDE_DIRS}
         ${DGTAL_INCLUDE_DIRS})
 
