--- a/app/CApplications/generate-solution/CMakeLists.txt
+++ b/app/CApplications/generate-solution/CMakeLists.txt
@@ -5,10 +5,10 @@ add_executable(generate-solution generate-solution.cpp)
 add_dependencies(generate-solution initialization${LINEL} solassign lpmodel-utils)
 
 target_include_directories(generate-solution PRIVATE
-        ${LPMODEL_INCLUDE_DIR}/solassign/include
-        ${LPMODEL_INCLUDE_DIR}/initialization${LINEL}/include
-        ${LPMODEL_INCLUDE_DIR}/utils/include
-        ${LPMODEL_INCLUDE_DIR}/terms/include
+        ${CMAKE_SOURCE_DIR}/modules/solassign/include
+        ${CMAKE_SOURCE_DIR}/modules/initialization${LINEL}/include
+        ${CMAKE_SOURCE_DIR}/modules/utils/include
+        ${CMAKE_SOURCE_DIR}/modules/terms/include
         ${DIPACUS_INCLUDE_DIRS}
         ${DGTAL_INCLUDE_DIRS})
 
