--- a/modules/python-exporter/CMakeLists.txt
+++ b/modules/python-exporter/CMakeLists.txt
@@ -2,17 +2,24 @@ cmake_minimum_required(VERSION 3.2)
 project(python-exporter)
 
 add_library(python-exporter SHARED src/PythonExporter.cpp )
-add_dependencies(python-exporter initialization${LINEL} constraints linearization lpwriter terms${LINEL} lpmodel-utils)
+
+
+if(${USE_REMOTE_REPOSITORIES})
+    add_dependencies(python-exporter dipacus scabolic initialization${LINEL} constraints linearization lpwriter terms${LINEL} lpmodel-utils)
+else()
+    add_dependencies(python-exporter initialization${LINEL} constraints linearization lpwriter terms${LINEL} lpmodel-utils)
+endif()
+
 
 target_include_directories(python-exporter PRIVATE
         include
-        ${LPMODEL_INCLUDE_DIR}/constraints/include
-        ${LPMODEL_INCLUDE_DIR}/initialization${LINEL}/include
-        ${LPMODEL_INCLUDE_DIR}/linearization/include
-        ${LPMODEL_INCLUDE_DIR}/lpwriter/include
-        ${LPMODEL_INCLUDE_DIR}/terms/include
-        ${LPMODEL_INCLUDE_DIR}/utils/include
-        ${LPMODEL_INCLUDE_DIR}/types/include
+        ${CMAKE_SOURCE_DIR}/modules/constraints/include
+        ${CMAKE_SOURCE_DIR}/modules/initialization${LINEL}/include
+        ${CMAKE_SOURCE_DIR}/modules/linearization/include
+        ${CMAKE_SOURCE_DIR}/modules/lpwriter/include
+        ${CMAKE_SOURCE_DIR}/modules/terms/include
+        ${CMAKE_SOURCE_DIR}/modules/utils/include
+        ${CMAKE_SOURCE_DIR}/modules/types/include
         ${DIPACUS_INCLUDE_DIRS}
         ${SCABOLIC_INCLUDE_DIRS}
         ${DGTAL_INCLUDE_DIRS})
