--- a/app/CApplications/create-ODR-image/CMakeLists.txt
+++ b/app/CApplications/create-ODR-image/CMakeLists.txt
@@ -2,17 +2,17 @@ cmake_minimum_required(VERSION 3.2)
 project(create-ODR-image)
 
 add_executable(create-ODR-image create-ODR-image.cpp src/InputReader.cpp)
-add_dependencies(create-ODR-image initialization${LINEL})
+add_dependencies(create-ODR-image initialization)
 
 target_include_directories(create-ODR-image PRIVATE
         include
-        ${CMAKE_SOURCE_DIR}/modules/initialization${LINEL}/include
+        ${CMAKE_SOURCE_DIR}/modules/initialization/include
         ${DIPACUS_INCLUDE_DIRS}
         ${SCABOLIC_INCLUDE_DIRS}
         ${DGTAL_INCLUDE_DIRS})
 
 target_link_libraries(create-ODR-image
-        -linitialization${LINEL}
+        -linitialization
         -ldipacus-base
         -lscabolic-core
         -lboost_system
