--- a/app/CApplications/export-cplex-qp/CMakeLists.txt
+++ b/app/CApplications/export-cplex-qp/CMakeLists.txt
@@ -2,12 +2,12 @@ cmake_minimum_required(VERSION 3.2)
 project(export-cplex-qp)
 
 add_executable(export-cplex-qp export-cplex-qp.cpp src/InputReader.cpp)
-add_dependencies(export-cplex-qp constraints initialization${LINEL} linearization lpwriter solassign terms${LINEL} lpmodel-utils)
+add_dependencies(export-cplex-qp constraints initialization linearization lpwriter solassign terms lpmodel-utils)
 
 target_include_directories(export-cplex-qp PRIVATE
         include
         ${CMAKE_SOURCE_DIR}/modules/constraints/include
-        ${CMAKE_SOURCE_DIR}/modules/initialization${LINEL}/include
+        ${CMAKE_SOURCE_DIR}/modules/initialization/include
         ${CMAKE_SOURCE_DIR}/modules/linearization/include
         ${CMAKE_SOURCE_DIR}/modules/lpwriter/include
         ${CMAKE_SOURCE_DIR}/modules/terms/include
@@ -20,8 +20,8 @@ target_include_directories(export-cplex-qp PRIVATE
 target_link_libraries(export-cplex-qp
         -llpwriter
         -lconstraints
-        -lterms${LINEL}
-        -linitialization${LINEL}
+        -lterms
+        -linitialization
         -lscabolic-core
         -ldipacus-derivates
         -ldipacus-components
