--- a/modules/constraints/CMakeLists.txt
+++ b/modules/constraints/CMakeLists.txt
@@ -6,11 +6,11 @@ find_package(DGtal REQUIRED)
 add_library(constraints SHARED
         src/ClosedAndConnected.cpp)
 
-add_dependencies(constraints initialization${LINEL} terms${LINEL})
+add_dependencies(constraints initialization terms)
 
 target_include_directories(constraints PRIVATE
         include
-        ${CMAKE_SOURCE_DIR}/modules/initialization${LINEL}/include
+        ${CMAKE_SOURCE_DIR}/modules/initialization/include
         ${CMAKE_SOURCE_DIR}/modules/terms/include
         ${SCABOLIC_INCLUDE_DIRS}
         ${DGTAL_INCLUDE_DIRS})
