--- a/modules/lpwriter/CMakeLists.txt
+++ b/modules/lpwriter/CMakeLists.txt
@@ -5,9 +5,9 @@ add_library(lpwriter SHARED
         src/LPWriter.cpp)
 
 if(${USE_REMOTE_REPOSITORIES})
-    add_dependencies(lpwriter scabolic initialization${LINEL} terms${LINEL} constraints linearization)
+    add_dependencies(lpwriter scabolic initialization terms constraints linearization)
 else()
-    add_dependencies(lpwriter initialization${LINEL} terms${LINEL} constraints linearization)
+    add_dependencies(lpwriter initialization terms constraints linearization)
 endif()
 
 
@@ -15,7 +15,7 @@ endif()
 target_include_directories(lpwriter PRIVATE
         include
         ${CMAKE_SOURCE_DIR}/modules/constraints/include
-        ${CMAKE_SOURCE_DIR}/modules/initialization${LINEL}/include
+        ${CMAKE_SOURCE_DIR}/modules/initialization/include
         ${CMAKE_SOURCE_DIR}/modules/objective/include
         ${CMAKE_SOURCE_DIR}/modules/linearization/include
         ${CMAKE_SOURCE_DIR}/modules/terms/include
@@ -24,7 +24,7 @@ target_include_directories(lpwriter PRIVATE
         ${DGTAL_INCLUDE_DIRS})
 
 target_link_libraries(lpwriter
-        -lterms${LINEL}
+        -lterms
         -lconstraints
-        -linitialization${LINEL}
+        -linitialization
         -lscabolic-core)
