--- a/modules/terms/CMakeLists.txt
+++ b/modules/terms/CMakeLists.txt
@@ -19,5 +19,6 @@ add_dependencies(terms initialization)
 
 target_include_directories(terms PRIVATE
         include
-        ${CMAKE_SOURCE_DIR}/modules/initialization${LINEL}/include
+        ${CMAKE_SOURCE_DIR}/modules/initialization/include
+        ${SCABOLIC_INCLUDE_DIRS}
         ${DGTAL_INCLUDE_DIRS})
