--- a/app/CApplications/export-cvxopt/CMakeLists.txt
+++ b/app/CApplications/export-cvxopt/CMakeLists.txt
@@ -2,12 +2,12 @@ cmake_minimum_required(VERSION 3.2)
 project(export-cvxopt)
 
 add_executable(export-cvxopt export-cvxopt.cpp src/InputReader.cpp)
-add_dependencies(export-cvxopt constraints initialization${LINEL} linearization lpwriter solassign terms${LINEL} lpmodel-utils python-exporter)
+add_dependencies(export-cvxopt constraints initialization linearization lpwriter solassign terms lpmodel-utils python-exporter)
 
 target_include_directories(export-cvxopt PRIVATE
         include
         ${CMAKE_SOURCE_DIR}/modules/constraints/include
-        ${CMAKE_SOURCE_DIR}/modules/initialization${LINEL}/include
+        ${CMAKE_SOURCE_DIR}/modules/initialization/include
         ${CMAKE_SOURCE_DIR}/modules/linearization/include
         ${CMAKE_SOURCE_DIR}/modules/lpwriter/include
         ${CMAKE_SOURCE_DIR}/modules/terms/include
@@ -22,8 +22,8 @@ target_link_libraries(export-cvxopt
         -lpython-exporter
         -llpwriter
         -lconstraints
-        -lterms${LINEL}
-        -linitialization${LINEL}
+        -lterms
+        -linitialization
         -lscabolic-core
         -ldipacus-derivates
         -ldipacus-components
